# ParallelComputing

./: README.md
CPU/: Makefile  README.md  SIMD_Performance_Report.md  advanced_simd_benchmark  advanced_simd_benchmark.cpp  image_processing_simd  image_processing_simd.cpp  simd_benchmark  simd_benchmark.cpp
CUDA/: CMakeLists.txt  CudaVectorAdd.vcxproj  Makefile  README.md  build_unix.sh  build_windows.bat  check_compilers.bat  simple_vector_add.cu  vector_add.cu
